--- a/_assets/css/base.css
+++ b/_assets/css/base.css
@@ -2,6 +2,38 @@
 	margin-top: 30px;
 }
 
-.mkk {
-	width: 600px;
+.cardwidth {
+	width: 100%;
+}
+
+.profileimg {
+	max-width: 90px;
+	margin-left: 25px;
+	margin-top: 10px;
+}
+
+.carddet {
+	margin-left: 60px;
+}
+
+.likes {
+	float: right;
+}
+
+.mdl-card__title {
+	font-weight: bold;
+	color: #64B5F6;
+	clear: none;
+}
+
+.mdl-card__supporting-text {
+	font-size: 20px;
+	color: #303030;
+}
+
+.postdate {
+	margin-left: 8px;
+	margin-top: 12px;
+	font-size: 12px;
+	color: #909090;
 }
